# youtubeCollectorByAPI

./: API_youtube_app.db  app.db  app.py  metadata_from_youtube_collector.py  pyproject.toml  requirements.txt  test_db.py
database/: API_youtube_app.db  auth.py  db_setup.py  movie_management.py
